--- a/bbs/sub04.html
+++ b/bbs/sub04.html
@@ -315,12 +315,12 @@ function fhead_submit(f)
               <dl>
              <dt>
 
-				<a href="../bbs/board01.php">외관</a></dt>
-             <dd><a href="../bbs/board01.php"> 산후조리원 외관모습입니다.  </a></dd>
+				<a href="">외관</a></dt>
+             <dd><a href=""> 산후조리원 외관모습입니다.  </a></dd>
             <!--              -->
 
              </dl>
-			<a href="../bbs/board01.php">
+			<a href="">
             <img src="../data/file/gallery/thumb-1893611149_VRh3eqTd_da2c43250bd7fcd5cd0edd7449edf325178efc6b_1380x550.jpg" width="1380" height="550" title="" draggable="false">      </a>
       </li>
                               		     <li style="width: 1250px; margin-right: 0px; float: left; display: block;">
