--- a/bbs/sub04.html
+++ b/bbs/sub04.html
@@ -297,7 +297,7 @@ function fhead_submit(f)
 
 
 
-    <form name="fboardlist" id="fboardlist" action="./board_list_update.php" onsubmit="return fboardlist_submit(this);" method="post">
+    <form name="fboardlist" id="fboardlist" action="" onsubmit="return fboardlist_submit(this);" method="post">
     <input type="hidden" name="bo_table" value="gallery">
     <input type="hidden" name="sfl" value="">
     <input type="hidden" name="stx" value="">
@@ -315,108 +315,108 @@ function fhead_submit(f)
               <dl>
              <dt>
 
-				<a href="">외관</a></dt>
-             <dd><a href=""> 산후조리원 외관모습입니다.  </a></dd>
+				<a href="../bbs/board01.html">외관</a></dt>
+             <dd><a href="../bbs/board01.html"> 산후조리원 외관모습입니다.  </a></dd>
             <!--              -->
 
              </dl>
-			<a href="">
+			<a href="../bbs/board01.html">
             <img src="../data/file/gallery/thumb-1893611149_VRh3eqTd_da2c43250bd7fcd5cd0edd7449edf325178efc6b_1380x550.jpg" width="1380" height="550" title="" draggable="false">      </a>
       </li>
                               		     <li style="width: 1250px; margin-right: 0px; float: left; display: block;">
               <dl>
              <dt>
 
-				<a href="../bbs/board02.php">입구</a></dt>
-             <dd><a href="../bbs/board02.php"> 산후조리원 입구입니다.  </a></dd>
+				<a href="../bbs/board02.html">입구</a></dt>
+             <dd><a href="../bbs/board02.html"> 산후조리원 입구입니다.  </a></dd>
             <!--              -->
 
              </dl>
-			<a href="../bbs/board02.php">
+			<a href="../bbs/board02.html">
             <img src="../data/file/gallery/thumb-1893611149_zOFwGIri_85f7ccb9faecc46eff0b867a9495cf26731ab4ee_1380x550.jpg" width="1380" height="550" title="" draggable="false">      </a>
       </li>
                               		     <li style="width: 1250px; margin-right: 0px; float: left; display: block;">
               <dl>
              <dt>
 
-				<a href="../bbs/board03.php">로비</a></dt>
-             <dd><a href="../bbs/board03.php"> 산후조리원 로비입니다.  </a></dd>
+				<a href="../bbs/board03.html">로비</a></dt>
+             <dd><a href="../bbs/board03.html"> 산후조리원 로비입니다.  </a></dd>
             <!--              -->
 
              </dl>
-			<a href="../bbs/board03.php">
+			<a href="../bbs/board03.html">
             <img src="../data/file/gallery/thumb-1893611149_BSdwbh5E_86a8a311da835ecd12b61aa7a3fffb671005deb4_1380x550.jpg" width="1380" height="550" title="" draggable="false">      </a>
       </li>
                               		     <li style="width: 1250px; margin-right: 0px; float: left; display: block;">
               <dl>
              <dt>
 
-				<a href="../bbs/board04.php">휴식공간</a></dt>
-             <dd><a href="../bbs/board04.php"> 편하게 쉴 수 있는 휴식공간입니다.  </a></dd>
+				<a href="../bbs/board04.html">휴식공간</a></dt>
+             <dd><a href="../bbs/board04.html"> 편하게 쉴 수 있는 휴식공간입니다.  </a></dd>
             <!--              -->
 
              </dl>
-			<a href="../bbs/board04.php">
+			<a href="../bbs/board04.html">
             <img src="../data/file/gallery/thumb-1893611149_Wm1GbKqa_6a9565a23e5b645d00734f85d33bacdb672699a2_1380x550.jpg" width="1380" height="550" title="" draggable="false">      </a>
       </li>
                               		     <li style="width: 1250px; margin-right: 0px; float: left; display: block;">
               <dl>
              <dt>
 
-				<a href="../bbs/board05.php">휴식공간</a></dt>
-             <dd><a href="../bbs/board05.php"> 편하게 쉴 수 있는 휴식공간입니다.  </a></dd>
+				<a href="../bbs/board05.html">휴식공간</a></dt>
+             <dd><a href="../bbs/board05.html"> 편하게 쉴 수 있는 휴식공간입니다.  </a></dd>
             <!--              -->
 
              </dl>
-			<a href="../bbs/board05.php">
+			<a href="../bbs/board05.html">
             <img src="../data/file/gallery/thumb-1893611149_a9fnOePp_b43d2c5f05a1fbcd6e6cb71eb5e393e52b914913_1380x550.jpg" width="1380" height="550" title="" draggable="false">      </a>
       </li>
                               		     <li style="width: 1250px; margin-right: 0px; float: left; display: block;">
               <dl>
              <dt>
 
-				<a href="../bbs/board06.php">휴식공간</a></dt>
-             <dd><a href="../bbs/board06.php">   편하게 쉴 수 있는 휴식공간입니다. </a></dd>
+				<a href="../bbs/board06.html">휴식공간</a></dt>
+             <dd><a href="../bbs/board06.html">   편하게 쉴 수 있는 휴식공간입니다. </a></dd>
             <!--              -->
 
              </dl>
-			<a href="../bbs/board06.php">
+			<a href="../bbs/board06.html">
             <img src="../data/file/gallery/thumb-1893611149_0r7guoes_6a798722364c6b6cd69d8ee4404ca32f79a3b771_1380x550.jpg" width="1380" height="550" title="" draggable="false">      </a>
       </li>
                               		     <li style="width: 1250px; margin-right: 0px; float: left; display: block;">
               <dl>
              <dt>
 
-				<a href="../bbs/board07.php">산후 마사지</a></dt>
-             <dd><a href="../bbs/board07.php"> 산모님을 위한 마사지입니다. </a></dd>
+				<a href="../bbs/board07.html">산후 마사지</a></dt>
+             <dd><a href="../bbs/board07.html"> 산모님을 위한 마사지입니다. </a></dd>
             <!--              -->
 
              </dl>
-			<a href="../bbs/board07.php">
+			<a href="../bbs/board07.html">
             <img src="../data/file/gallery/thumb-1893611149_EaQ6ZJtA_7e65d2a2a04944ca5a771ee6e1309ecc5737aec3_1380x550.jpg" width="1380" height="550" title="" draggable="false">      </a>
       </li>
                               		     <li style="width: 1250px; margin-right: 0px; float: left; display: block;">
               <dl>
              <dt>
 
-				<a href="../bbs/board08.php">VIP ROOM</a></dt>
-             <dd><a href="../bbs/board08.php">고급스럽고 럭셔리한 가족실입니다.</a></dd>
+				<a href="../bbs/board08.html">VIP ROOM</a></dt>
+             <dd><a href="../bbs/board08.html">고급스럽고 럭셔리한 가족실입니다.</a></dd>
             <!--              -->
 
              </dl>
-			<a href="../bbs/board08.php">
+			<a href="../bbs/board08.html">
             <img src="../data/file/gallery/thumb-1893611149_avJIsYCc_21463ee519c35186e95aeccab4573fc6cc06a211_1380x550.jpg" width="1380" height="550" title="" draggable="false">      </a>
       </li>
                               		     <li style="width: 1250px; margin-right: 0px; float: left; display: block;">
               <dl>
              <dt>
 
-				<a href="../bbs/board09.php">일반실입니다.</a></dt>
-             <dd><a href="../bbs/board09.php"> 가족이 같이 지낼 수 있는 일반실입니다.         </a></dd>
+				<a href="../bbs/board09.html">일반실입니다.</a></dt>
+             <dd><a href="../bbs/board09.html"> 가족이 같이 지낼 수 있는 일반실입니다.         </a></dd>
             <!--              -->
 
              </dl>
-			<a href="../bbs/board09.php">
+			<a href="../bbs/board09.html">
             <img src="../data/file/gallery/thumb-1893611149_YD6Zipvy_dc96d34102c984c9f061b7f73ee01f1c880285a8_1380x550.jpg" width="1380" height="550" title="" draggable="false">      </a>
       </li>
                              </ul></div><ul class="flex-direction-nav"><li class="flex-nav-prev"><a class="flex-prev flex-disabled" href="#" tabindex="-1"></a></li><li class="flex-nav-next"><a class="flex-next" href="#"></a></li></ul></div>
